@@ -29,6 +29,8 @@ python-reahl (3.2.0) unstable; urgency=low
  * Added dependency on watchdog.
  * Changed refresh() so that it takes args in order to enable one to specify which of your query_arguments trigger an ajax update (instead of the default, which is all of them).
  * Added bootstrap flavour of Javascript Dialog and its Buttons. This works differently, there are no Button objects, rather JsFunction and add_js_button.
+ * Changed FieldSets to have Legends instead of Labels.
+ * Changed the for= attribute on an Input's Label to refer to the Input control css_id.
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 13 Aug 2015 14:56:00 +0200
 
